--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,12 @@
     package="com.nadawoo.nadazonepluspandamobile.invazionprototype">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
+        <activity android:name=".activities.MapActivity"></activity>
         <activity
             android:name=".activities.MainActivity"
             android:theme="@style/AppTheme.FullScreen">
@@ -25,7 +30,6 @@
         </activity>
         <activity android:name=".activities.RankingsActivity" />
         <activity android:name=".activities.CitizensActivity" />
-        <activity android:name=".activities.MapActivity" />
         <activity android:name=".activities.MenuActivity" />
     </application>
 
